--- a/css/headPanel.css
+++ b/css/headPanel.css
@@ -1,8 +1,8 @@
-[podskazka] {
+[prompt] {
   position: relative;
 }
-[podskazka]::after {
-  content: attr(podskazka);
+[prompt]::after {
+  content: attr(prompt);
   position: absolute;
   width:max-content;
   max-width: 250px;
@@ -16,7 +16,7 @@
   transition: 0.5s;
   z-index: 9999;
 } 
-[podskazka]:hover::after {
+[prompt]:hover::after {
   opacity: 1; /* Показываем подсказку */
   top: 2em; /* Положение подсказки */
 }
@@ -30,7 +30,6 @@
 a {
   color: #FFA500;
   text-decoration: none;
-  
 }
 
 a:hover {
@@ -43,7 +42,7 @@ body {
   margin-right: 25%;
 }
 
-.tablist {
+#headPanel {
   list-style:none;
   height:41px;
   padding:0;
@@ -51,11 +50,11 @@ body {
   border:none;
   background:#303030
 }
-.tablist li {
+#headPanel li {
   float:left;
   margin-right:0
 }
-.tablist li>a {
+#headPanel li>a {
   display:block;
   padding:8px 10px 0;
   text-decoration:none;
@@ -68,32 +67,32 @@ body {
   /* white-space:nowrap; */
   height:32px
 }
-.tablist li>a img {
+#headPanel li>a img {
   vertical-align:middle
 }
-.tablist li>a:hover {
+#headPanel li>a:hover {
   color:#fff;
   text-decoration:none;
   background-color:#404040
 }
-.tablist li.current>a {
+#headPanel li.current>a {
   background-color:#404040;
   color:#eee
 }
-.tablist li.current>a:hover {
+#headPanel li.current>a:hover {
   color:#fff;
   text-decoration:none;
   background-color:#404040
 }
-.tablist li.search {
+#headPanel li.search {
   float:right
 }
-.tablist li.special>a {
+#headPanel li.special>a {
   color:#e3181b
 }
-.tablist li.current.special>a {
+#headPanel li.current.special>a {
   text-shadow:2px 2px 4px #3a0b0c
 }
-.tablist li.search {
+#headPanel li.search {
   margin:6px
 }
