--- a/css/index.css
+++ b/css/index.css
@@ -124,7 +124,7 @@ p {
 #content {
   margin-top: 97px;
   background-color: white;
-  padding: 0 32px;
+  padding: 32px 32px;
 }
 
 .contentItemTD {
