--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import "https://static3.mos.ru/upload/share/fonts/fonts.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -127,14 +129,18 @@ p {
   padding: 32px 32px;
 }
 
-.contentItemTD {
-  width: 33%;
-  border-collapse:collapse;
-  border-spacing: 0;
-  padding: 0 10px;
-  margin-bottom: 20px;
+#contentLeft {
+  display: inline-block;
+  height:100%;
+  vertical-align: top;
 }
 
-#contentLeft {
-  width: 120px;
+#contentCenter {
+  display: inline-block;
+  margin-left: 32px;
+  vertical-align: top;
+}
+
+img {
+  display: inline;
 }
