--- a/css/content.css
+++ b/css/content.css
@@ -29,3 +29,11 @@
   width:100%;
   height: 48px;
 }
+
+#itogovoe_sochineniye_2022_11klass {
+width: 100%;
+height: 200px;
+border-radius: 50px;
+background-image: url("../img/lgbt.png");
+
+}
