--- a/css/content.css
+++ b/css/content.css
@@ -13,9 +13,17 @@
 }
 
 #contentCenter {
+  width: 1104px;
   display: inline-block;
   margin-left: 32px;
   vertical-align: top;
+}
+
+#contentRight {
+  display: inline-block;
+  margin-left: 32px;
+  vertical-align: top;
+  width: 240px;
 }
 
 .contentItem {
@@ -32,8 +40,13 @@
 
 #itogovoe_sochineniye_2022_11klass {
 width: 100%;
-height: 200px;
-border-radius: 50px;
+height: 74px;
+border-radius: 15px;
+border-width: 2px;
 background-image: url("../img/lgbt.png");
+}
+
+hr {
+  margin: 10px 0;
 
 }
