--- a/css/mer.css
+++ b/css/mer.css
@@ -4,6 +4,12 @@
   display: block;
 }
 
+.mer240x400 {
+  height: 400px;
+  width: 240px;
+  display: block;
+}
+
 .contentItemTimeBlock {
   width: 100%;
   height: 48px;;
