--- a/css/index.css
+++ b/css/index.css
@@ -86,11 +86,12 @@ body {
   line-height: 56px;
 }
 
-header>a {
+.headNavItem>a {
   color:#0e0e0f;
+  text-decoration: none;
 }
 
-header>a:hover {
+.headNavItem>a:hover {
   color:#c22;
 }
 
