--- a/css/blog.css
+++ b/css/blog.css
@@ -6,7 +6,7 @@
 .blogPostTitle {
   width: 100%;
   font-size: 44px;
-  color: inherit;
+  color: #0e0e0f;
   font-family: "PT Serif",Arial,serif
 }
 
