--- a/css/blog.css
+++ b/css/blog.css
@@ -7,7 +7,7 @@
   width: 100%;
   font-size: 44px;
   color: #0e0e0f;
-  font-weight: bold;
+  font-weight: 400;
   font-family: "PT Serif",Arial,serif
 }
 
